hubSide/force-app/main/default/objects/Emprunt__c/Emprunt__c.object-meta.xml
<CustomObject>
    <label>Emprunt</label>
    <nameField>
        <displayFormat>EMP-{000000}</displayFormat>
        <label>Emprunt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emprunts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>