hubSide/force-app/main/default/objects/Emprunt__c/fields/AdjustAuthorizationFlg__c.field-meta.xml
<CustomField>
    <fullName>AdjustAuthorizationFlg__c</fullName>
    <description>calculation of the date at which the pre authorization (Adyen) might be updated to be valid on 28 more days</description>
    <formula>IF(AND(NOT(ISPICKVAL(LastAdyenAdjustStatus__c,&apos;Failure&apos;)),LastAuthorizationDate__c + 26 &lt;=  NOW(), Caution_restituee__c &lt;&gt; true,  OR(NOT(ISPICKVAL(Status__c, &apos;Retourné&apos;)), NOT(ISPICKVAL(Status__c,&apos;Retour avec défaut&apos;)))) , true, false)</formula>
    <label>AdjustAuthorizationFlg</label>
    <type>Checkbox</type>
</CustomField>