hubSide/force-app/main/default/objects/Emprunt__c/fields/AdjustPspReferences__c.field-meta.xml
<CustomField>
    <fullName>AdjustPspReferences__c</fullName>
    <label>AdjustPspReferences</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>