hubSide/force-app/main/default/objects/Emprunt__c/fields/Adresse_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_livraison__c</fullName>
    <formula>Reservation_origine__r.Adresse_de_livraison__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse de livraison</label>
    <type>Text</type>
</CustomField>