hubSide/force-app/main/default/objects/Emprunt__c/fields/AdyenCaptureStatus__c.field-meta.xml
<CustomField>
    <fullName>AdyenCaptureStatus__c</fullName>
    <description>Specify the status of the adyen reponse after having sent a capture request</description>
    <label>Statut de restitution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wait</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Success</fullName>
                <label>Réussie</label>
            </value>
            <value>
                <fullName>Failure</fullName>
                <label>Echouée</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <label>En cours</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>