hubSide/force-app/main/default/objects/Emprunt__c/fields/AdyenPaymentLink__c.field-meta.xml
<CustomField>
    <fullName>AdyenPaymentLink__c</fullName>
    <description>Payment Link on the Adyen PayByLink Platform</description>
    <label>URL Caution</label>
    <type>Url</type>
</CustomField>