hubSide/force-app/main/default/objects/Emprunt__c/fields/Autorisation_depassement__c.field-meta.xml
<CustomField>
    <fullName>Autorisation_depassement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox indiquant si le client a le droit de dépasser le nombre de jours qu&apos;il lui reste, malgré les pénalités.</description>
    <label>Autorisation de dépassement ?</label>
    <type>Checkbox</type>
</CustomField>