hubSide/force-app/main/default/objects/Emprunt__c/fields/CapturePspReference__c.field-meta.xml
<CustomField>
    <fullName>CapturePspReference__c</fullName>
    <label>N° de transaction de restitution</label>
    <length>16</length>
    <type>Text</type>
</CustomField>