hubSide/force-app/main/default/objects/Emprunt__c/fields/Caution_recue__c.field-meta.xml
<CustomField>
    <fullName>Caution_recue__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Caution reçue</label>
    <type>Checkbox</type>
</CustomField>