hubSide/force-app/main/default/objects/Emprunt__c/fields/Caution_restituee__c.field-meta.xml
<CustomField>
    <fullName>Caution_restituee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox permettant de savoir si le vendeur a effectivement bien rendu sa caution au client.</description>
    <label>Caution restituée ?</label>
    <type>Checkbox</type>
</CustomField>