hubSide/force-app/main/default/objects/Emprunt__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Client empruntant l&apos;objet</description>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le client doit être du type Person Account.</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Emprunts (Client)</relationshipLabel>
    <relationshipName>Emprunts_client</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>