hubSide/force-app/main/default/objects/Emprunt__c/fields/ClientLastName__c.field-meta.xml
<CustomField>
    <fullName>ClientLastName__c</fullName>
    <formula>Client__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClientLastName</label>
    <type>Text</type>
</CustomField>