hubSide/force-app/main/default/objects/Emprunt__c/fields/Coefficient_decompte__c.field-meta.xml
<CustomField>
    <fullName>Coefficient_decompte__c</fullName>
    <label>Coefficient de décompte</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>