hubSide/force-app/main/default/objects/Emprunt__c/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <description>Motif du geste commercial dans le cas d&apos;un dépassement.</description>
    <label>Commentaire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>