hubSide/force-app/main/default/objects/Emprunt__c/fields/Contrat__c.field-meta.xml
<CustomField>
    <fullName>Contrat__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contrat lié à l&apos;emprunt</description>
    <label>Contrat</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 5) AND 4</booleanFilter>
        <errorMessage>Il n&apos;y a pas de contrat pour ce client, ou alors le contrat en question a déjà un emprunt actif.</errorMessage>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contrat location</value>
        </filterItems>
        <filterItems>
            <field>Asset.Emprunt_en_cours__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Asset.Emprunt_en_cours__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Client__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Status__c</field>
            <operation>equals</operation>
            <value>Retour sans défaut, Retour avec défaut</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Emprunts</relationshipLabel>
    <relationshipName>Emprunts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>