hubSide/force-app/main/default/objects/Emprunt__c/fields/Date_prevue_depassement__c.field-meta.xml
<CustomField>
    <fullName>Date_prevue_depassement__c</fullName>
    <formula>Date_sortie__c + Coefficient_decompte__c * (Nombre_jours_restants__c + Nombre_jours_imputes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date prévue de dépassement</label>
    <type>Date</type>
</CustomField>