hubSide/force-app/main/default/objects/Emprunt__c/fields/Date_retour__c.field-meta.xml
<CustomField>
    <fullName>Date_retour__c</fullName>
    <description>Date effective de retour</description>
    <label>Date de retour</label>
    <type>Date</type>
</CustomField>