hubSide/force-app/main/default/objects/Emprunt__c/fields/Date_retour_prevu__c.field-meta.xml
<CustomField>
    <fullName>Date_retour_prevu__c</fullName>
    <description>Date prévisionnelle de retour pour vérifier le nombre de jours possible et gérer les stocks glissants par la suite</description>
    <label>Date du retour prévu</label>
    <type>Date</type>
</CustomField>