hubSide/force-app/main/default/objects/Emprunt__c/fields/Date_sortie__c.field-meta.xml
<CustomField>
    <fullName>Date_sortie__c</fullName>
    <description>Date d&apos;emprunt de l&apos;objet</description>
    <label>Date de sortie</label>
    <type>Date</type>
</CustomField>