hubSide/force-app/main/default/objects/Emprunt__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <description>Description du défaut / justification du montant demandé</description>
    <label>Défaut</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>