hubSide/force-app/main/default/objects/Emprunt__c/fields/Depassement__c.field-meta.xml
<CustomField>
    <fullName>Depassement__c</fullName>
    <formula>IF(
    Nombre_jours_depassement__c &gt; 0, 
    IMAGE(&quot;/resource/KO_Icon&quot;, &quot;KO&quot;, 15, 15),
    IMAGE(&quot;/resource/OK_Icon&quot;, &quot;OK&quot;, 15, 15)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dépassement ?</label>
    <type>Text</type>
</CustomField>