hubSide/force-app/main/default/objects/Emprunt__c/fields/Duree_location__c.field-meta.xml
<CustomField>
    <fullName>Duree_location__c</fullName>
    <description>Nombre de jour de location
[SFAMI-2160 : Si l&apos;emprunt correspond à un voucher partenaire, la durée est celle saisie dans la section &quot;Consommation Externe&quot;]</description>
    <formula>IF(
    ISBLANK(ExternalCons_EquivDaysNumber__c),
    IF(
        ISNULL( Date_retour__c ), 
        IF(
            ISNULL( Date_retour_prevu__c ), 
            0, 
            Date_retour_prevu__c - Date_sortie__c
        ),
        Date_retour__c - Date_sortie__c
    ),
    ExternalCons_EquivDaysNumber__c
)</formula>
    <label>Durée de la location</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>