hubSide/force-app/main/default/objects/Emprunt__c/fields/Email_client__c.field-meta.xml
<CustomField>
    <fullName>Email_client__c</fullName>
    <description>Email du client</description>
    <inlineHelpText>A rectifier dans BAppli si besoin</inlineHelpText>
    <label>Email client</label>
    <type>Email</type>
</CustomField>