hubSide/force-app/main/default/objects/Emprunt__c/fields/Employe_responsable_geste_commercial__c.field-meta.xml
<CustomField>
    <fullName>Employe_responsable_geste_commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employé ayant pris la décision de faire une remise au client après dépassement.</description>
    <label>Employé responsable du geste commercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Emprunts</relationshipName>
    <type>Lookup</type>
</CustomField>