hubSide/force-app/main/default/objects/Emprunt__c/fields/Etat_retour__c.field-meta.xml
<CustomField>
    <fullName>Etat_retour__c</fullName>
    <description>Etat du produit emprunté lors de son retour</description>
    <label>Etat retour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Etat_produit</valueSetName>
    </valueSet>
</CustomField>