hubSide/force-app/main/default/objects/Emprunt__c/fields/Etat_sortie__c.field-meta.xml
<CustomField>
    <fullName>Etat_sortie__c</fullName>
    <label>Etat sortie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>