hubSide/force-app/main/default/objects/Emprunt__c/fields/ExternalCons_EquivDaysNumber__c.field-meta.xml
<CustomField>
    <fullName>ExternalCons_EquivDaysNumber__c</fullName>
    <description>SFAMI-2160 : Nombre de jours de consommation externe équivalant un montant de remise chez un partenaire</description>
    <inlineHelpText>Chaque jour saisi dans ce champs doit correpondre au montant de remise du Voucher partenaire :
•	1 Jour Pass’Loc = 50 € de réduction sur le Voucher
•	Limite de 10 J après les 3 premiers mois du contrat
•	Limite de 20 J par an ( soit 1000€/an )</inlineHelpText>
    <label>Equivalent Jours du voucher</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>