hubSide/force-app/main/default/objects/Emprunt__c/fields/Facture__c.field-meta.xml
<CustomField>
    <fullName>Facture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Facture liée à l&apos;emprunt en cours</description>
    <label>Facture</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Facture__c.Contrat__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contrat__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Facture__c</referenceTo>
    <relationshipLabel>Emprunts</relationshipLabel>
    <relationshipName>Emprunts</relationshipName>
    <type>Lookup</type>
</CustomField>