hubSide/force-app/main/default/objects/Emprunt__c/fields/FlowBypass__c.field-meta.xml
<CustomField>
    <fullName>FlowBypass__c</fullName>
    <label>FlowBypass</label>
    <type>DateTime</type>
</CustomField>