hubSide/force-app/main/default/objects/Emprunt__c/fields/Gamme_formule__c.field-meta.xml
<CustomField>
    <fullName>Gamme_formule__c</fullName>
    <formula>Contrat__r.Code_formule__r.Gamme_formule__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gamme formule</label>
    <type>Text</type>
</CustomField>