hubSide/force-app/main/default/objects/Emprunt__c/fields/Heure_retour__c.field-meta.xml
<CustomField>
    <fullName>Heure_retour__c</fullName>
    <description>Heure de retour de l&apos;objet emprunté</description>
    <label>Heure de retour</label>
    <type>Time</type>
</CustomField>