hubSide/force-app/main/default/objects/Emprunt__c/fields/Heure_retour_prevue__c.field-meta.xml
<CustomField>
    <fullName>Heure_retour_prevue__c</fullName>
    <label>Heure de retour prevue</label>
    <type>Time</type>
</CustomField>