hubSide/force-app/main/default/objects/Emprunt__c/fields/Heure_sortie__c.field-meta.xml
<CustomField>
    <fullName>Heure_sortie__c</fullName>
    <description>Heure de sortie de l&apos;objet emprunté</description>
    <label>Heure de sortie</label>
    <type>Time</type>
</CustomField>