hubSide/force-app/main/default/objects/Emprunt__c/fields/InitialAuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>InitialAuthorizationDate__c</fullName>
    <description>First authorization date for the Adyen deposit</description>
    <label>Date de transaction</label>
    <type>DateTime</type>
</CustomField>