hubSide/force-app/main/default/objects/Emprunt__c/fields/Jours_consommes__c.field-meta.xml
<CustomField>
    <fullName>Jours_consommes__c</fullName>
    <formula>IF(
    TODAY() &gt;= Date_sortie__c, 
    IF(
        OR(
            ISPICKVAL(Status__c, &apos;Sortie&apos;), 
            ISPICKVAL(Status__c, &apos;En magasin&apos;)
        ), 
        TODAY() - Date_sortie__c,
        Date_retour__c - Date_sortie__c
    ), 
    0   
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jours consommés (à ce jour)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>