hubSide/force-app/main/default/objects/Emprunt__c/fields/LastAdyenAdjustStatus__c.field-meta.xml
<CustomField>
    <fullName>LastAdyenAdjustStatus__c</fullName>
    <label>LastAdyenAdjustmentStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wait</fullName>
                <default>true</default>
                <label>Wait</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>