hubSide/force-app/main/default/objects/Emprunt__c/fields/LastAuthorizationDate__c.field-meta.xml
<CustomField>
    <fullName>LastAuthorizationDate__c</fullName>
    <label>Derniere date de pré-autorisation</label>
    <type>DateTime</type>
</CustomField>