hubSide/force-app/main/default/objects/Emprunt__c/fields/Montant_a_deduire__c.field-meta.xml
<CustomField>
    <fullName>Montant_a_deduire__c</fullName>
    <description>Valeur déduite de la caution ? en fonction de l&apos;état de retour du produit.</description>
    <label>Montant à déduire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>