hubSide/force-app/main/default/objects/Emprunt__c/fields/Montant_caution_retour__c.field-meta.xml
<CustomField>
    <fullName>Montant_caution_retour__c</fullName>
    <description>Montant de la caution lors du retour de l&apos;objet emprunté</description>
    <label>Montant de la caution retour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>