hubSide/force-app/main/default/objects/Emprunt__c/fields/Montant_caution_sortie__c.field-meta.xml
<CustomField>
    <fullName>Montant_caution_sortie__c</fullName>
    <description>Montant de la caution encaissée</description>
    <label>Montant de la caution sortie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>