hubSide/force-app/main/default/objects/Emprunt__c/fields/Montant_depassement__c.field-meta.xml
<CustomField>
    <fullName>Montant_depassement__c</fullName>
    <formula>Nombre_jours_depassement__c * Contrat__r.Code_formule__r.Tarif_depassement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant dépassement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>