hubSide/force-app/main/default/objects/Emprunt__c/fields/Montant_facture__c.field-meta.xml
<CustomField>
    <fullName>Montant_facture__c</fullName>
    <formula>Montant_depassement__c - Montant_geste_commercial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant facturé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>