hubSide/force-app/main/default/objects/Emprunt__c/fields/Montant_geste_commercial__c.field-meta.xml
<CustomField>
    <fullName>Montant_geste_commercial__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Montant du geste commercial dans le cas d&apos;un dépassement.</description>
    <label>Montant du geste commercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>