hubSide/force-app/main/default/objects/Emprunt__c/fields/Motif_geste_commercial__c.field-meta.xml
<CustomField>
    <fullName>Motif_geste_commercial__c</fullName>
    <label>Motif du geste commercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bon client</fullName>
            </value>
            <value>
                <fullName>Retard</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>