hubSide/force-app/main/default/objects/Emprunt__c/fields/Nom_produit_emprunte__c.field-meta.xml
<CustomField>
    <fullName>Nom_produit_emprunte__c</fullName>
    <formula>Produit_emprunte__r.Produit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom du produit emprunté</label>
    <type>Text</type>
</CustomField>