hubSide/force-app/main/default/objects/Emprunt__c/fields/Nombre_de_jours_consommation__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_jours_consommation__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valeur fixe, initialisée au début de l&apos;emprunt par le nombre de jour restant dans la consommation sur la période en cours.</description>
    <label>Nombre de jours consommation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>