hubSide/force-app/main/default/objects/Emprunt__c/fields/Nombre_jours_depassement__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_depassement__c</fullName>
    <formula>IF(
    Nombre_jours_imputes__c - Nombre_de_jours_consommation__c - Contrat__r.Code_formule__r.Nombre_jours_carence__c &gt; 0,
    Nombre_jours_imputes__c - Nombre_de_jours_consommation__c - Contrat__r.Code_formule__r.Nombre_jours_carence__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de jours en dépassement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>