hubSide/force-app/main/default/objects/Emprunt__c/fields/Nombre_jours_imputes__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_imputes__c</fullName>
    <description>Calcule le nombre de jours dans le cas où le produit emprunté serait de gamme inférieure à la gamme offre choisie.
[SFAMI-2160 : prend l&apos;équivalent nombre de jour de location dans la cadre d&apos;un voucher partenaire]</description>
    <formula>IF(
    NOT(ISBLANK(ExternalCons_EquivDaysNumber__c)),
    ExternalCons_EquivDaysNumber__c,
    IF(
        OR(Coefficient_decompte__c == 0,ISBLANK(Coefficient_decompte__c ), ISNULL(Coefficient_decompte__c )),
        0,
        CEILING( Jours_consommes__c / Coefficient_decompte__c )
    )
)</formula>
    <label>Nombre de jours imputés</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>