hubSide/force-app/main/default/objects/Emprunt__c/fields/Nombre_jours_restants__c.field-meta.xml
<CustomField>
    <fullName>Nombre_jours_restants__c</fullName>
    <formula>IF(
    (Nombre_de_jours_consommation__c - Nombre_jours_imputes__c) &gt; 0,
    Nombre_de_jours_consommation__c - Nombre_jours_imputes__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre de jours restants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>