hubSide/force-app/main/default/objects/Emprunt__c/fields/Observation_retour__c.field-meta.xml
<CustomField>
    <fullName>Observation_retour__c</fullName>
    <description>Zone de commentaire libre sur l&apos;état de l&apos;objet emprunté à son retour</description>
    <label>Observation retour</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>