hubSide/force-app/main/default/objects/Emprunt__c/fields/Observation_sortie__c.field-meta.xml
<CustomField>
    <fullName>Observation_sortie__c</fullName>
    <label>Observation sortie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>