hubSide/force-app/main/default/objects/Emprunt__c/fields/Point_de_vente_sortie__c.field-meta.xml
<CustomField>
    <fullName>Point_de_vente_sortie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point de vente sortie</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le point de vente de sortie doit être du type Business Account.</errorMessage>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Emprunts (sortie)</relationshipLabel>
    <relationshipName>Emprunts_sortie</relationshipName>
    <type>Lookup</type>
</CustomField>