hubSide/force-app/main/default/objects/Emprunt__c/fields/PspReference__c.field-meta.xml
<CustomField>
    <fullName>PspReference__c</fullName>
    <label>Numéro de transaction</label>
    <length>16</length>
    <type>Text</type>
</CustomField>