hubSide/force-app/main/default/objects/Emprunt__c/fields/Regle_decompte__c.field-meta.xml
<CustomField>
    <fullName>Regle_decompte__c</fullName>
    <formula>IF(
    Coefficient_decompte__c &lt;= 1, 
    &apos;Aucun avantage lié au combo gamme produit / gamme offre&apos;, 
    &apos;Le client peut emprunter &apos; +  TEXT(Coefficient_decompte__c) + &apos; fois plus longtemps que sa formule&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Règle de décompte</label>
    <type>Text</type>
</CustomField>