hubSide/force-app/main/default/objects/Emprunt__c/fields/Reservation_origine__c.field-meta.xml
<CustomField>
    <fullName>Reservation_origine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Réservation convertie pour donner l&apos;emprunt actuel.</description>
    <label>Reservation d&apos;origine</label>
    <referenceTo>Reservation__c</referenceTo>
    <relationshipLabel>Emprunts</relationshipLabel>
    <relationshipName>Emprunts</relationshipName>
    <type>Lookup</type>
</CustomField>