hubSide/force-app/main/default/objects/Emprunt__c/fields/Responsable_emprunt__c.field-meta.xml
<CustomField>
    <fullName>Responsable_emprunt__c</fullName>
    <formula>CONTAINS($User.Distributeur_de_reference__c, Point_de_vente_sortie__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsable de l&apos;emprunt ?</label>
    <type>Checkbox</type>
</CustomField>