hubSide/force-app/main/default/objects/Emprunt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En magasin</fullName>
                <default>true</default>
                <label>En magasin</label>
            </value>
            <value>
                <fullName>Sortie</fullName>
            </value>
            <value>
                <fullName>Retourné</fullName>
                <label>Retour sans défaut</label>
            </value>
            <value>
                <fullName>Retour avec défaut</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
                <isActive>false</isActive>
                <label>Annulé</label>
            </value>
            <value>
                <fullName>Label.Location_StatusEmprunt1</fullName>
                <isActive>false</isActive>
                <label>Label.Location_StatusEmprunt1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>