hubSide/force-app/main/default/objects/Emprunt__c/fields/Type_de_caution__c.field-meta.xml
<CustomField>
    <fullName>Type_de_caution__c</fullName>
    <formula>TEXT(Point_de_vente_sortie__r.Type_caution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de caution</label>
    <type>Text</type>
</CustomField>