hubSide/force-app/main/default/objects/Emprunt__c/recordTypes/Emprunt.recordType-meta.xml
<RecordType>
    <fullName>Emprunt</fullName>
    <active>true</active>
    <description>Record type pour l&apos;objet emprunt une fois créé</description>
    <label>Emprunt</label>
</RecordType>