hubSide/force-app/main/default/objects/Emprunt__c/recordTypes/Nouvel_emprunt.recordType-meta.xml
<RecordType>
    <fullName>Nouvel_emprunt</fullName>
    <active>true</active>
    <description>Record type pour la création de l&apos;objet emprunt</description>
    <label>Nouvel emprunt</label>
</RecordType>