hubSide/force-app/main/default/objects/Emprunt__c/validationRules/Champs_non_editables.validationRule-meta.xml
<ValidationRule>
    <fullName>Champs_non_editables</fullName>
    <active>true</active>
    <description>Le contrat, le client et le produit ne peuvent être modifiés une fois l&apos;emprunt créé.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        ISCHANGED( Contrat__c ),
        ISCHANGED( Client__c ),
        ISCHANGED( Produit_emprunte__c )
    )
)</errorConditionFormula>
    <errorMessage>Une fois l&apos;emprunt créé, les champs client, contrat et produit sélectionné ne sont plus modifiables.</errorMessage>
</ValidationRule>