hubSide/force-app/main/default/objects/Emprunt__c/validationRules/Date_de_retour_inclue_dans_le_contrat.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_de_retour_inclue_dans_le_contrat</fullName>
    <active>true</active>
    <description>La date de retour de l&apos;objet doit être inclue dans la période du contrat, cad qu&apos;elle doit être supérieure à la StartDate et inférieure à l&apos;EndDate.</description>
    <errorConditionFormula>IF(
    Contrat__r.Date_fin_contrat__c != NULL, 
    OR( 
        Contrat__r.Date_debut_contrat__c  &gt;  Date_retour_prevu__c,
        Date_retour_prevu__c &gt;   Contrat__r.Date_fin_contrat__c , 
        Contrat__r.Date_debut_contrat__c  &gt;  Date_retour__c,
        Date_retour__c &gt;   Contrat__r.Date_fin_contrat__c  
    ), 
    OR( 
        Contrat__r.Date_debut_contrat__c &gt; Date_retour_prevu__c,
        Contrat__r.Date_debut_contrat__c &gt; Date_retour__c
    )
)</errorConditionFormula>
    <errorMessage>La date de retour saisie n&apos;est pas couverte par le contrat actuel.</errorMessage>
</ValidationRule>